# xmms-gtk3

./: .gitignore  ChangeLog  GTK3_PORTING.md  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  configure  configure.in  gtk_compat.h  wmxmms.1  xmms-config  xmms.1  xmms.spec
Effect/: Makefile  Makefile.in
Effect/echo_plugin/: Makefile  Makefile.in  echo.c  gui.c
Effect/stereo_plugin/: Makefile  Makefile.in  stereo.c
Effect/voice/: Makefile  Makefile.in  voice.h
General/: Makefile  Makefile.in
General/ir/: Makefile  Makefile.in  about.c  configure.c  ir.h
General/joystick/: Makefile  Makefile.in  configure.c  joy.h
General/song_change/: Makefile  Makefile.in  song_change.c
Input/: Makefile  Makefile.in
Input/cdaudio/: Makefile  Makefile.in  cdaudio.c  cdaudio.h  cddb.c  configure.c
Input/mikmod/: Makefile  Makefile.in  mikmod-plugin.h  plugin.c
Input/mpg123/: Makefile  Makefile.am  Makefile.in  configure.c  fileinfo.c  mpg123.h
Input/tonegen/: Makefile  Makefile.in
Input/vorbis/: Makefile  Makefile.am  Makefile.in  configure.c  fileinfo.c  http.c  vorbis.c
Input/wav/: Makefile  Makefile.in
Output/: Makefile  Makefile.am  Makefile.in
Output/OSS/: Makefile  Makefile.in  OSS.h  configure.c
Output/alsa/: Makefile  Makefile.in  alsa.h  audio.c  configure.c  init.c
Output/disk_writer/: Makefile  Makefile.in  disk_writer.c
Output/esd/: Makefile  Makefile.in  about.c  configure.c  esdout.h
Output/pulse/: Makefile  Makefile.am  Makefile.in  about.c  audio.c  configure.c  init.c  pulse.c  pulse.h
Output/solaris/: Makefile  Makefile.in  Sun.h  (+1 more)
Visualization/: Makefile  Makefile.in
intl/: Makefile
libxmms/: Makefile  Makefile.am  Makefile.in  acinclude.m4  charset.c  config.h  config.h.in  configure  configure.in  dirbrowser.c  dirbrowser.h  titlestring.h  util.c  util.h  xentry.c  xentry.h
packaging/: build-deb.sh
po/: Makefile.in
wmxmms/: Makefile  Makefile.in  wmxmms.c
xmms/: Makefile  Makefile.am  Makefile.in  about.c  bmp.c  controlsocket.c  dock.c  equalizer.c  fullscreen.h  hints.c  input.c  main.c  playlist_list.c  playlist_popup.c  playlistwin.c  pluginenum.c  prefswin.c  skin.c  skinwin.c  sm.c  svis.c  textbox.c  util.c  xmms  xmms.desktop  xmms.h
(+19 files in other folders)
